postgres_tests/copy2/expected.txt

-----------
QUERY:
CREATE TEMP TABLE x (
	a serial,
	b int,
	c text not null default 'stuff',
	d text,
	e text
) ;
RESULT:
	postgres: None

-----------
QUERY:


CREATE FUNCTION fn_x_before () RETURNS TRIGGER AS '
  BEGIN
		NEW.e := ''before trigger fired''::text;
RESULT:
	postgres: unterminated quoted string at or near "'
  BEGIN
		NEW.e := ''before trigger fired''::text;"
LINE 3: CREATE FUNCTION fn_x_before () RETURNS TRIGGER AS '
                                                          ^


-----------
QUERY:

		return NEW;
RESULT:
	postgres: syntax error at or near "return"
LINE 2:   return NEW;
          ^


-----------
QUERY:

	END;
RESULT:
	postgres: None

-----------
QUERY:

' LANGUAGE plpgsql;
RESULT:
	postgres: unterminated quoted string at or near "' LANGUAGE plpgsql;"
LINE 2: ' LANGUAGE plpgsql;
        ^


-----------
QUERY:


CREATE FUNCTION fn_x_after () RETURNS TRIGGER AS '
  BEGIN
		UPDATE x set e=''after trigger fired'' where c=''stuff'';
RESULT:
	postgres: unterminated quoted string at or near "'
  BEGIN
		UPDATE x set e=''after trigger fired'' where c=''stuff'';"
LINE 3: CREATE FUNCTION fn_x_after () RETURNS TRIGGER AS '
                                                         ^


-----------
QUERY:

		return NULL;
RESULT:
	postgres: syntax error at or near "return"
LINE 2:   return NULL;
          ^


-----------
QUERY:

	END;
RESULT:
	postgres: None

-----------
QUERY:

' LANGUAGE plpgsql;
RESULT:
	postgres: unterminated quoted string at or near "' LANGUAGE plpgsql;"
LINE 2: ' LANGUAGE plpgsql;
        ^


-----------
QUERY:


CREATE TRIGGER trg_x_after AFTER INSERT ON x
FOR EACH ROW EXECUTE PROCEDURE fn_x_after();
RESULT:
	postgres: function fn_x_after() does not exist


-----------
QUERY:


CREATE TRIGGER trg_x_before BEFORE INSERT ON x
FOR EACH ROW EXECUTE PROCEDURE fn_x_before();
RESULT:
	postgres: function fn_x_before() does not exist


-----------
QUERY:


COPY x (a, b, c, d, e) from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

9999	\N	\\N	\NN	\N
10000	21	31	41	51
\.

COPY x (b, d) from stdin;
RESULT:
	postgres: syntax error at or near "9999"
LINE 2: 9999 \N \\N \NN \N
        ^


-----------
QUERY:

1	test_1
\.

COPY x (b, d) from stdin;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 test_1
        ^


-----------
QUERY:

2	test_2
3	test_3
4	test_4
5	test_5
\.

COPY x (a, b, c, d, e) from stdin;
RESULT:
	postgres: syntax error at or near "2"
LINE 2: 2 test_2
        ^


-----------
QUERY:

10001	22	32	42	52
10002	23	33	43	53
10003	24	34	44	54
10004	25	35	45	55
10005	26	36	46	56
\.

-- non-existent column in column list: should fail
COPY x (xyz) from stdin;
RESULT:
	postgres: syntax error at or near "10001"
LINE 2: 10001 22 32 42 52
        ^


-----------
QUERY:


-- redundant options
COPY x from stdin (format CSV, FORMAT CSV);
RESULT:
	postgres: conflicting or redundant options
LINE 4: COPY x from stdin (format CSV, FORMAT CSV);
                                       ^


-----------
QUERY:

COPY x from stdin (freeze off, freeze on);
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (freeze off, freeze on);
                                       ^


-----------
QUERY:

COPY x from stdin (delimiter ',', delimiter ',');
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (delimiter ',', delimiter ',');
                                          ^


-----------
QUERY:

COPY x from stdin (null ' ', null ' ');
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (null ' ', null ' ');
                                     ^


-----------
QUERY:

COPY x from stdin (header off, header on);
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (header off, header on);
                                       ^


-----------
QUERY:

COPY x from stdin (quote ':', quote ':');
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (quote ':', quote ':');
                                      ^


-----------
QUERY:

COPY x from stdin (escape ':', escape ':');
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (escape ':', escape ':');
                                       ^


-----------
QUERY:

COPY x from stdin (force_quote (a), force_quote *);
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (force_quote (a), force_quote *);
                                            ^


-----------
QUERY:

COPY x from stdin (force_not_null (a), force_not_null (b));
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (force_not_null (a), force_not_null (b));
                                               ^


-----------
QUERY:

COPY x from stdin (force_null (a), force_null (b));
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (force_null (a), force_null (b));
                                           ^


-----------
QUERY:

COPY x from stdin (convert_selectively (a), convert_selectively (b));
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (convert_selectively (a), convert_selectiv...
                                                    ^


-----------
QUERY:

COPY x from stdin (encoding 'sql_ascii', encoding 'sql_ascii');
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (encoding 'sql_ascii', encoding 'sql_ascii...
                                                 ^


-----------
QUERY:

COPY x from stdin (on_error ignore, on_error ignore);
RESULT:
	postgres: conflicting or redundant options
LINE 2: COPY x from stdin (on_error ignore, on_error ignore);
                                            ^


-----------
QUERY:


-- incorrect options
COPY x to stdin (format BINARY, delimiter ',');
RESULT:
	postgres: cannot specify DELIMITER in BINARY mode


-----------
QUERY:

COPY x to stdin (format BINARY, null 'x');
RESULT:
	postgres: cannot specify NULL in BINARY mode


-----------
QUERY:

COPY x from stdin (format BINARY, on_error ignore);
RESULT:
	postgres: only ON_ERROR STOP is allowed in BINARY mode


-----------
QUERY:

COPY x from stdin (on_error unsupported);
RESULT:
	postgres: COPY ON_ERROR "unsupported" not recognized
LINE 2: COPY x from stdin (on_error unsupported);
                           ^


-----------
QUERY:

COPY x to stdin (format TEXT, force_quote(a));
RESULT:
	postgres: COPY FORCE_QUOTE requires CSV mode


-----------
QUERY:

COPY x from stdin (format CSV, force_quote(a));
RESULT:
	postgres: COPY FORCE_QUOTE cannot be used with COPY FROM


-----------
QUERY:

COPY x to stdout (format TEXT, force_not_null(a));
RESULT:
	postgres: COPY FORCE_NOT_NULL requires CSV mode


-----------
QUERY:

COPY x to stdin (format CSV, force_not_null(a));
RESULT:
	postgres: COPY FORCE_NOT_NULL cannot be used with COPY TO


-----------
QUERY:

COPY x to stdout (format TEXT, force_null(a));
RESULT:
	postgres: COPY FORCE_NULL requires CSV mode


-----------
QUERY:

COPY x to stdin (format CSV, force_null(a));
RESULT:
	postgres: COPY FORCE_NULL cannot be used with COPY TO


-----------
QUERY:

COPY x to stdin (format BINARY, on_error unsupported);
RESULT:
	postgres: COPY ON_ERROR cannot be used with COPY TO
LINE 2: COPY x to stdin (format BINARY, on_error unsupported);
                                        ^


-----------
QUERY:


-- too many columns in column list: should fail
COPY x (a, b, c, d, e, d, c) from stdin;
RESULT:
	postgres: column "d" specified more than once


-----------
QUERY:


-- missing data: should fail
COPY x from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:


\.
COPY x from stdin;
RESULT:
	postgres: syntax error at or near "\"
LINE 3: \.
        ^


-----------
QUERY:

2000	230	23	23
\.
COPY x from stdin;
RESULT:
	postgres: syntax error at or near "2000"
LINE 2: 2000 230 23 23
        ^


-----------
QUERY:

2001	231	\N	\N
\.

-- extra data: should fail
COPY x from stdin;
RESULT:
	postgres: syntax error at or near "2001"
LINE 2: 2001 231 \N \N
        ^


-----------
QUERY:

2002	232	40	50	60	70	80
\.

-- various COPY options: delimiters, oids, NULL string, encoding
COPY x (b, c, d, e) from stdin delimiter ',' null 'x';
RESULT:
	postgres: syntax error at or near "2002"
LINE 2: 2002 232 40 50 60 70 80
        ^


-----------
QUERY:

x,45,80,90
x,\x,\\x,\\\x
x,\,,\\\,,\\
\.

COPY x from stdin WITH DELIMITER AS ';
RESULT:
	postgres: syntax error at or near "x"
LINE 2: x,45,80,90
        ^


-----------
QUERY:
' NULL AS '';
RESULT:
	postgres: unterminated quoted string at or near "' NULL AS '';"
LINE 1: ' NULL AS '';
        ^


-----------
QUERY:

3000;
RESULT:
	postgres: syntax error at or near "3000"
LINE 2: 3000;
        ^


-----------
QUERY:
;
RESULT:
	postgres: can't execute an empty query

-----------
QUERY:
c;
RESULT:
	postgres: syntax error at or near "c"
LINE 1: c;
        ^


-----------
QUERY:
;
RESULT:
	postgres: can't execute an empty query

-----------
QUERY:

\.

COPY x from stdin WITH DELIMITER AS ':' NULL AS E'\\X' ENCODING 'sql_ascii';
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \.
        ^


-----------
QUERY:

4000:\X:C:\X:\X
4001:1:empty::
4002:2:null:\X:\X
4003:3:Backslash:\\:\\
4004:4:BackslashX:\\X:\\X
4005:5:N:\N:\N
4006:6:BackslashN:\\N:\\N
4007:7:XX:\XX:\XX
4008:8:Delimiter:\::\:
\.

COPY x TO stdout WHERE a = 1;
RESULT:
	postgres: syntax error at or near "4000"
LINE 2: 4000:\X:C:\X:\X
        ^


-----------
QUERY:

COPY x from stdin WHERE a = 50004;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

50003	24	34	44	54
50004	25	35	45	55
50005	26	36	46	56
\.

COPY x from stdin WHERE a > 60003;
RESULT:
	postgres: syntax error at or near "50003"
LINE 2: 50003 24 34 44 54
        ^


-----------
QUERY:

60001	22	32	42	52
60002	23	33	43	53
60003	24	34	44	54
60004	25	35	45	55
60005	26	36	46	56
\.

COPY x from stdin WHERE f > 60003;
RESULT:
	postgres: syntax error at or near "60001"
LINE 2: 60001 22 32 42 52
        ^


-----------
QUERY:


COPY x from stdin WHERE a = max(x.b);
RESULT:
	postgres: aggregate functions are not allowed in COPY FROM WHERE conditions
LINE 3: COPY x from stdin WHERE a = max(x.b);
                                    ^


-----------
QUERY:


COPY x from stdin WHERE a IN (SELECT 1 FROM x);
RESULT:
	postgres: cannot use subquery in COPY FROM WHERE condition
LINE 3: COPY x from stdin WHERE a IN (SELECT 1 FROM x);
                                  ^


-----------
QUERY:


COPY x from stdin WHERE a IN (generate_series(1,5));
RESULT:
	postgres: set-returning functions are not allowed in COPY FROM WHERE conditions
LINE 3: COPY x from stdin WHERE a IN (generate_series(1,5));
                                      ^


-----------
QUERY:


COPY x from stdin WHERE a = row_number() over(b);
RESULT:
	postgres: window functions are not allowed in COPY FROM WHERE conditions
LINE 3: COPY x from stdin WHERE a = row_number() over(b);
                                    ^


-----------
QUERY:



-- check results of copy in
SELECT * FROM x;
RESULT:
	postgres: []

-----------
QUERY:


-- check copy out
COPY x TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY x (c, e) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY x (b, e) TO stdout WITH NULL 'I''m null';
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


CREATE TEMP TABLE y (
	col1 text,
	col2 text
);
RESULT:
	postgres: None

-----------
QUERY:


INSERT INTO y VALUES ('Jackson, Sam', E'\\h');
RESULT:
	postgres: None

-----------
QUERY:

INSERT INTO y VALUES ('It is "perfect".',E'\t');
RESULT:
	postgres: None

-----------
QUERY:

INSERT INTO y VALUES ('', NULL);
RESULT:
	postgres: None

-----------
QUERY:


COPY y TO stdout WITH CSV;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY y TO stdout WITH CSV QUOTE '''' DELIMITER '|';
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY y TO stdout WITH CSV FORCE QUOTE col2 ESCAPE E'\\' ENCODING 'sql_ascii';
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY y TO stdout WITH CSV FORCE QUOTE *;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


-- Repeat above tests with new 9.0 option syntax

COPY y TO stdout (FORMAT CSV);
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY y TO stdout (FORMAT CSV, QUOTE '''', DELIMITER '|');
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY y TO stdout (FORMAT CSV, FORCE_QUOTE (col2), ESCAPE E'\\');
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY y TO stdout (FORMAT CSV, FORCE_QUOTE *);
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


\copy y TO stdout (FORMAT CSV)
\copy y TO stdout (FORMAT CSV, QUOTE '''', DELIMITER '|')
\copy y TO stdout (FORMAT CSV, FORCE_QUOTE (col2), ESCAPE E'\\')
\copy y TO stdout (FORMAT CSV, FORCE_QUOTE *)

--test that we read consecutive LFs properly

CREATE TEMP TABLE testnl (a int, b text, c int);
RESULT:
	postgres: syntax error at or near "\"
LINE 3: \copy y TO stdout (FORMAT CSV)
        ^


-----------
QUERY:


COPY testnl FROM stdin CSV;
RESULT:
	postgres: relation "testnl" does not exist


-----------
QUERY:

1,"a field with two LFs

inside",2
\.

-- test end of copy marker
CREATE TEMP TABLE testeoc (a text);
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1,"a field with two LFs
        ^


-----------
QUERY:


COPY testeoc FROM stdin CSV;
RESULT:
	postgres: relation "testeoc" does not exist


-----------
QUERY:

a\.
\.b
c\.d
"\."
\.

COPY testeoc TO stdout CSV;
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a\.
        ^


-----------
QUERY:


-- test handling of nonstandard null marker that violates escaping rules

CREATE TEMP TABLE testnull(a int, b text);
RESULT:
	postgres: None

-----------
QUERY:

INSERT INTO testnull VALUES (1, E'\\0'), (NULL, NULL);
RESULT:
	postgres: None

-----------
QUERY:


COPY testnull TO stdout WITH NULL AS E'\\0';
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


COPY testnull FROM stdin WITH NULL AS E'\\0';
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

42	\\0
\0	\0
\.

SELECT * FROM testnull;
RESULT:
	postgres: syntax error at or near "42"
LINE 2: 42 \\0
        ^


-----------
QUERY:


BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

CREATE TABLE vistest (LIKE testeoc);
RESULT:
	postgres: relation "testeoc" does not exist
LINE 2: CREATE TABLE vistest (LIKE testeoc);
                                   ^


-----------
QUERY:

COPY vistest FROM stdin CSV;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

a0
b
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "a0"
LINE 2: a0
        ^


-----------
QUERY:

SELECT * FROM vistest;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY vistest FROM stdin CSV;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

a1
b
\.
SELECT * FROM vistest;
RESULT:
	postgres: syntax error at or near "a1"
LINE 2: a1
        ^


-----------
QUERY:

SAVEPOINT s1;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY vistest FROM stdin CSV;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

d1
e
\.
SELECT * FROM vistest;
RESULT:
	postgres: syntax error at or near "d1"
LINE 2: d1
        ^


-----------
QUERY:

COMMIT;
RESULT:
	postgres: None

-----------
QUERY:

SELECT * FROM vistest;
RESULT:
	postgres: relation "vistest" does not exist
LINE 2: SELECT * FROM vistest;
                      ^


-----------
QUERY:


BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: relation "vistest" does not exist


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

a2
b
\.
SELECT * FROM vistest;
RESULT:
	postgres: syntax error at or near "a2"
LINE 2: a2
        ^


-----------
QUERY:

SAVEPOINT s1;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

d2
e
\.
SELECT * FROM vistest;
RESULT:
	postgres: syntax error at or near "d2"
LINE 2: d2
        ^


-----------
QUERY:

COMMIT;
RESULT:
	postgres: None

-----------
QUERY:

SELECT * FROM vistest;
RESULT:
	postgres: relation "vistest" does not exist
LINE 2: SELECT * FROM vistest;
                      ^


-----------
QUERY:


BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: relation "vistest" does not exist


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

x
y
\.
SELECT * FROM vistest;
RESULT:
	postgres: syntax error at or near "x"
LINE 2: x
        ^


-----------
QUERY:

COMMIT;
RESULT:
	postgres: None

-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: relation "vistest" does not exist


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: relation "vistest" does not exist


-----------
QUERY:

p
g
\.
BEGIN;
RESULT:
	postgres: syntax error at or near "p"
LINE 2: p
        ^


-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: relation "vistest" does not exist


-----------
QUERY:

SAVEPOINT s1;
RESULT:
	postgres: SAVEPOINT can only be used in transaction blocks


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: relation "vistest" does not exist


-----------
QUERY:

m
k
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "m"
LINE 2: m
        ^


-----------
QUERY:

BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

INSERT INTO vistest VALUES ('z');
RESULT:
	postgres: relation "vistest" does not exist
LINE 2: INSERT INTO vistest VALUES ('z');
                    ^


-----------
QUERY:

SAVEPOINT s1;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

TRUNCATE vistest;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

ROLLBACK TO SAVEPOINT s1;
RESULT:
	postgres: savepoint "s1" does not exist


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

d3
e
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "d3"
LINE 2: d3
        ^


-----------
QUERY:

CREATE FUNCTION truncate_in_subxact() RETURNS VOID AS
$$
BEGIN
	TRUNCATE vistest;
EXCEPTION
  WHEN OTHERS THEN
	INSERT INTO vistest VALUES ('subxact failure');
END;
$$ language plpgsql;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

INSERT INTO vistest VALUES ('z');
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

SELECT truncate_in_subxact();
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY vistest FROM stdin CSV FREEZE;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

d4
e
\.
SELECT * FROM vistest;
RESULT:
	postgres: syntax error at or near "d4"
LINE 2: d4
        ^


-----------
QUERY:

COMMIT;
RESULT:
	postgres: None

-----------
QUERY:

SELECT * FROM vistest;
RESULT:
	postgres: relation "vistest" does not exist
LINE 2: SELECT * FROM vistest;
                      ^


-----------
QUERY:

-- Test FORCE_NOT_NULL and FORCE_NULL options
CREATE TEMP TABLE forcetest (
    a INT NOT NULL,
    b TEXT NOT NULL,
    c TEXT,
    d TEXT,
    e TEXT
);
RESULT:
	postgres: None

-----------
QUERY:

\pset null NULL
-- should succeed with no effect (/* REPLACED */''b/* REPLACED */'' remains an empty string, /* REPLACED */''c/* REPLACED */'' remains NULL)
BEGIN;
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \pset null NULL
        ^


-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NOT_NULL(b), FORCE_NULL(c));
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1,,""
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1,,""
        ^


-----------
QUERY:

SELECT b, c FROM forcetest WHERE a = 1;
RESULT:
	postgres: []

-----------
QUERY:

-- should succeed, FORCE_NULL and FORCE_NOT_NULL can be both specified
BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

COPY forcetest (a, b, c, d) FROM STDIN WITH (FORMAT csv, FORCE_NOT_NULL(c,d), FORCE_NULL(c,d));
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

2,'a',,""
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "2"
LINE 2: 2,'a',,""
        ^


-----------
QUERY:

SELECT c, d FROM forcetest WHERE a = 2;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

-- should fail with not-null constraint violation
BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NULL(b), FORCE_NOT_NULL(c));
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

3,,""
\.
ROLLBACK;
RESULT:
	postgres: syntax error at or near "3"
LINE 2: 3,,""
        ^


-----------
QUERY:

-- should fail with /* REPLACED */''not referenced by COPY/* REPLACED */'' error
BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY forcetest (d, e) FROM STDIN WITH (FORMAT csv, FORCE_NOT_NULL(b));
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

ROLLBACK;
RESULT:
	postgres: None

-----------
QUERY:

-- should fail with /* REPLACED */''not referenced by COPY/* REPLACED */'' error
BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

COPY forcetest (d, e) FROM STDIN WITH (FORMAT csv, FORCE_NULL(b));
RESULT:
	postgres: FORCE_NULL column "b" not referenced by COPY


-----------
QUERY:

ROLLBACK;
RESULT:
	postgres: None

-----------
QUERY:

-- should succeed with no effect (/* REPLACED */''b/* REPLACED */'' remains an empty string, /* REPLACED */''c/* REPLACED */'' remains NULL)
BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NOT_NULL *, FORCE_NULL *);
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

4,,""
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "4"
LINE 2: 4,,""
        ^


-----------
QUERY:

SELECT b, c FROM forcetest WHERE a = 4;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

-- should succeed with effect (/* REPLACED */''b/* REPLACED */'' remains an empty string)
BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NOT_NULL *);
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

5,,""
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "5"
LINE 2: 5,,""
        ^


-----------
QUERY:

SELECT b, c FROM forcetest WHERE a = 5;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

-- should succeed with effect (/* REPLACED */''c/* REPLACED */'' remains NULL)
BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NULL *);
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

6,"b",""
\.
COMMIT;
RESULT:
	postgres: syntax error at or near "6"
LINE 2: 6,"b",""
        ^


-----------
QUERY:

SELECT b, c FROM forcetest WHERE a = 6;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

-- should fail with /* REPLACED */''conflicting or redundant options/* REPLACED */'' error
BEGIN;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NOT_NULL *, FORCE_NOT_NULL(b));
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

ROLLBACK;
RESULT:
	postgres: None

-----------
QUERY:

-- should fail with /* REPLACED */''conflicting or redundant options/* REPLACED */'' error
BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

COPY forcetest (a, b, c) FROM STDIN WITH (FORMAT csv, FORCE_NULL *, FORCE_NULL(b));
RESULT:
	postgres: conflicting or redundant options
LINE 2: ... b, c) FROM STDIN WITH (FORMAT csv, FORCE_NULL *, FORCE_NULL...
                                                             ^


-----------
QUERY:

ROLLBACK;
RESULT:
	postgres: None

-----------
QUERY:


\pset null ''

-- test case with whole-row Var in a check constraint
create table check_con_tbl (f1 int);
RESULT:
	postgres: syntax error at or near "\"
LINE 3: \pset null ''
        ^


-----------
QUERY:

create function check_con_function(check_con_tbl) returns bool as $$
begin
  raise notice 'input = %', row_to_json($1);
  return $1.f1 > 0;
end $$ language plpgsql immutable;
RESULT:
	postgres: type check_con_tbl does not exist


-----------
QUERY:

alter table check_con_tbl add check (check_con_function(check_con_tbl.*));
RESULT:
	postgres: relation "check_con_tbl" does not exist


-----------
QUERY:

-- \d+ check_con_tbl
copy check_con_tbl from stdin;
RESULT:
	postgres: relation "check_con_tbl" does not exist


-----------
QUERY:

1
\N
\.
copy check_con_tbl from stdin;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1
        ^


-----------
QUERY:

0
\.
select * from check_con_tbl;
RESULT:
	postgres: syntax error at or near "0"
LINE 2: 0
        ^


-----------
QUERY:


-- test with RLS enabled.
CREATE ROLE regress_rls_copy_user;
RESULT:
	postgres: None

-----------
QUERY:

CREATE ROLE regress_rls_copy_user_colperms;
RESULT:
	postgres: None

-----------
QUERY:

CREATE TABLE rls_t1 (a int, b int, c int);
RESULT:
	postgres: None

-----------
QUERY:


COPY rls_t1 (a, b, c) from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1	4	1
2	3	2
3	2	3
4	1	4
\.

CREATE POLICY p1 ON rls_t1 FOR SELECT USING (a % 2 = 0);
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 4 1
        ^


-----------
QUERY:

ALTER TABLE rls_t1 ENABLE ROW LEVEL SECURITY;
RESULT:
	postgres: None

-----------
QUERY:

ALTER TABLE rls_t1 FORCE ROW LEVEL SECURITY;
RESULT:
	postgres: None

-----------
QUERY:


GRANT SELECT ON TABLE rls_t1 TO regress_rls_copy_user;
RESULT:
	postgres: None

-----------
QUERY:

GRANT SELECT (a, b) ON TABLE rls_t1 TO regress_rls_copy_user_colperms;
RESULT:
	postgres: None

-----------
QUERY:


-- all columns
COPY rls_t1 TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY rls_t1 (a, b, c) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


-- subset of columns
COPY rls_t1 (a) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY rls_t1 (a, b) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


-- column reordering
COPY rls_t1 (b, a) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


SET SESSION AUTHORIZATION regress_rls_copy_user;
RESULT:
	postgres: None

-----------
QUERY:


-- all columns
COPY rls_t1 TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY rls_t1 (a, b, c) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


-- subset of columns
COPY rls_t1 (a) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY rls_t1 (a, b) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


-- column reordering
COPY rls_t1 (b, a) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


RESET SESSION AUTHORIZATION;
RESULT:
	postgres: None

-----------
QUERY:


SET SESSION AUTHORIZATION regress_rls_copy_user_colperms;
RESULT:
	postgres: None

-----------
QUERY:


-- attempt all columns (should fail)
COPY rls_t1 TO stdout;
RESULT:
	postgres: permission denied for table rls_t1


-----------
QUERY:

COPY rls_t1 (a, b, c) TO stdout;
RESULT:
	postgres: permission denied for table rls_t1


-----------
QUERY:


-- try to copy column with no privileges (should fail)
COPY rls_t1 (c) TO stdout;
RESULT:
	postgres: permission denied for table rls_t1


-----------
QUERY:


-- subset of columns (should succeed)
COPY rls_t1 (a) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:

COPY rls_t1 (a, b) TO stdout;
RESULT:
	postgres: can't execute COPY TO: use the copy_to() method instead

-----------
QUERY:


RESET SESSION AUTHORIZATION;
RESULT:
	postgres: None

-----------
QUERY:


-- test with INSTEAD OF INSERT trigger on a view
CREATE TABLE instead_of_insert_tbl(id serial, name text);
RESULT:
	postgres: None

-----------
QUERY:

CREATE VIEW instead_of_insert_tbl_view AS SELECT ''::text AS str;
RESULT:
	postgres: None

-----------
QUERY:


COPY instead_of_insert_tbl_view FROM stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:
 -- fail
test1
\.

CREATE FUNCTION fun_instead_of_insert_tbl() RETURNS trigger AS $$
BEGIN
  INSERT INTO instead_of_insert_tbl (name) VALUES (NEW.str);
  RETURN NULL;
END;
$$ LANGUAGE plpgsql;
RESULT:
	postgres: syntax error at or near "test1"
LINE 2: test1
        ^


-----------
QUERY:

CREATE TRIGGER trig_instead_of_insert_tbl_view
  INSTEAD OF INSERT ON instead_of_insert_tbl_view
  FOR EACH ROW EXECUTE PROCEDURE fun_instead_of_insert_tbl();
RESULT:
	postgres: function fun_instead_of_insert_tbl() does not exist


-----------
QUERY:


COPY instead_of_insert_tbl_view FROM stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

test1
\.

SELECT * FROM instead_of_insert_tbl;
RESULT:
	postgres: syntax error at or near "test1"
LINE 2: test1
        ^


-----------
QUERY:


-- Test of COPY optimization with view using INSTEAD OF INSERT
-- trigger when relation is created in the same transaction as
-- when COPY is executed.
BEGIN;
RESULT:
	postgres: None

-----------
QUERY:

CREATE VIEW instead_of_insert_tbl_view_2 as select ''::text as str;
RESULT:
	postgres: None

-----------
QUERY:

CREATE TRIGGER trig_instead_of_insert_tbl_view_2
  INSTEAD OF INSERT ON instead_of_insert_tbl_view_2
  FOR EACH ROW EXECUTE PROCEDURE fun_instead_of_insert_tbl();
RESULT:
	postgres: function fun_instead_of_insert_tbl() does not exist


-----------
QUERY:


COPY instead_of_insert_tbl_view_2 FROM stdin;
RESULT:
	postgres: current transaction is aborted, commands ignored until end of transaction block


-----------
QUERY:

test1
\.

SELECT * FROM instead_of_insert_tbl;
RESULT:
	postgres: syntax error at or near "test1"
LINE 2: test1
        ^


-----------
QUERY:

COMMIT;
RESULT:
	postgres: None

-----------
QUERY:


-- tests for on_error option
CREATE TABLE check_ign_err (n int, m int[], k int);
RESULT:
	postgres: None

-----------
QUERY:

COPY check_ign_err FROM STDIN WITH (on_error stop);
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1	{1}	1
a	{2}	2
3	{3}	3333333333
4	{a, 4}	4

5	{5}	5
\.
COPY check_ign_err FROM STDIN WITH (on_error ignore);
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 {1} 1
        ^


-----------
QUERY:

1	{1}	1
a	{2}	2
3	{3}	3333333333
4	{a, 4}	4

5	{5}	5
6	a
7	{7}	a
8	{8}	8
\.
SELECT * FROM check_ign_err;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 {1} 1
        ^


-----------
QUERY:


-- test datatype error that can/* REPLACED */''t be handled as soft: should fail
CREATE TABLE hard_err(foo widget);
RESULT:
	postgres: type "widget" does not exist
LINE 4: CREATE TABLE hard_err(foo widget);
                                  ^


-----------
QUERY:

COPY hard_err FROM STDIN WITH (on_error ignore);
RESULT:
	postgres: relation "hard_err" does not exist


-----------
QUERY:

1
\.

-- test missing data: should fail
COPY check_ign_err FROM STDIN WITH (on_error ignore);
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1
        ^


-----------
QUERY:

1	{1}
\.

-- test extra data: should fail
COPY check_ign_err FROM STDIN WITH (on_error ignore);
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 {1}
        ^


-----------
QUERY:

1	{1}	3	abc
\.

-- clean up
DROP TABLE forcetest;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 {1} 3 abc
        ^


-----------
QUERY:

DROP TABLE vistest;
RESULT:
	postgres: table "vistest" does not exist


-----------
QUERY:

DROP FUNCTION truncate_in_subxact();
RESULT:
	postgres: function truncate_in_subxact() does not exist


-----------
QUERY:

DROP TABLE x, y;
RESULT:
	postgres: None

-----------
QUERY:

DROP TABLE rls_t1 CASCADE;
RESULT:
	postgres: None

-----------
QUERY:

DROP ROLE regress_rls_copy_user;
RESULT:
	postgres: None

-----------
QUERY:

DROP ROLE regress_rls_copy_user_colperms;
RESULT:
	postgres: None

-----------
QUERY:

DROP FUNCTION fn_x_before();
RESULT:
	postgres: function fn_x_before() does not exist


-----------
QUERY:

DROP FUNCTION fn_x_after();
RESULT:
	postgres: function fn_x_after() does not exist


-----------
QUERY:

DROP TABLE instead_of_insert_tbl;
RESULT:
	postgres: None

-----------
QUERY:

DROP VIEW instead_of_insert_tbl_view;
RESULT:
	postgres: None

-----------
QUERY:

DROP VIEW instead_of_insert_tbl_view_2;
RESULT:
	postgres: view "instead_of_insert_tbl_view_2" does not exist


-----------
QUERY:

DROP FUNCTION fun_instead_of_insert_tbl();
RESULT:
	postgres: function fun_instead_of_insert_tbl() does not exist


-----------
QUERY:

DROP TABLE check_ign_err;
RESULT:
	postgres: None

-----------
QUERY:

DROP TABLE hard_err;
RESULT:
	postgres: table "hard_err" does not exist


-----------
QUERY:


--
-- COPY FROM ... DEFAULT
--

create temp table copy_default (
	id integer primary key,
	text_value text not null default 'test',
	ts_value timestamp without time zone not null default '2022-07-05'
);
RESULT:
	postgres: None

-----------
QUERY:


-- if DEFAULT is not specified, then the marker will be regular data
copy copy_default from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1	value	'2022-07-04'
2	\D	'2022-07-05'
\.

select id, text_value, ts_value from copy_default;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 value '2022-07-04'
        ^


-----------
QUERY:


truncate copy_default;
RESULT:
	postgres: None

-----------
QUERY:


copy copy_default from stdin with (format csv);
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1,value,2022-07-04
2,\D,2022-07-05
\.

select id, text_value, ts_value from copy_default;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1,value,2022-07-04
        ^


-----------
QUERY:


truncate copy_default;
RESULT:
	postgres: None

-----------
QUERY:


-- DEFAULT cannot be used in binary mode
copy copy_default from stdin with (format binary, default '\D');
RESULT:
	postgres: cannot specify DEFAULT in BINARY mode


-----------
QUERY:


-- DEFAULT cannot be new line nor carriage return
copy copy_default from stdin with (default E'\n');
RESULT:
	postgres: COPY default representation cannot use newline or carriage return


-----------
QUERY:

copy copy_default from stdin with (default E'\r');
RESULT:
	postgres: COPY default representation cannot use newline or carriage return


-----------
QUERY:


-- DELIMITER cannot appear in DEFAULT spec
copy copy_default from stdin with (delimiter ';
RESULT:
	postgres: unterminated quoted string at or near "';"
LINE 4: copy copy_default from stdin with (delimiter ';
                                                     ^


-----------
QUERY:
', default 'test;
RESULT:
	postgres: syntax error at or near "', default '"
LINE 1: ', default 'test;
        ^


-----------
QUERY:
test');
RESULT:
	postgres: syntax error at or near "test"
LINE 1: test');
        ^


-----------
QUERY:


-- CSV quote cannot appear in DEFAULT spec
copy copy_default from stdin with (format csv, quote '"', default 'test"test');
RESULT:
	postgres: CSV quote character must not appear in the DEFAULT specification


-----------
QUERY:


-- NULL and DEFAULT spec must be different
copy copy_default from stdin with (default '\N');
RESULT:
	postgres: NULL specification and DEFAULT specification cannot be the same


-----------
QUERY:


-- cannot use DEFAULT marker in column that has no DEFAULT value
copy copy_default from stdin with (default '\D');
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

\D	value	'2022-07-04'
2	\D	'2022-07-05'
\.

copy copy_default from stdin with (format csv, default '\D');
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \D value '2022-07-04'
        ^


-----------
QUERY:

\D,value,2022-07-04
2,\D,2022-07-05
\.

-- The DEFAULT marker must be unquoted and unescaped or it/* REPLACED */''s not recognized
copy copy_default from stdin with (default '\D');
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \D,value,2022-07-04
        ^


-----------
QUERY:

1	\D	'2022-07-04'
2	\\D	'2022-07-04'
3	"\D"	'2022-07-04'
\.

select id, text_value, ts_value from copy_default;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 \D '2022-07-04'
        ^


-----------
QUERY:


truncate copy_default;
RESULT:
	postgres: None

-----------
QUERY:


copy copy_default from stdin with (format csv, default '\D');
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1,\D,2022-07-04
2,\\D,2022-07-04
3,"\D",2022-07-04
\.

select id, text_value, ts_value from copy_default;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1,\D,2022-07-04
        ^


-----------
QUERY:


truncate copy_default;
RESULT:
	postgres: None

-----------
QUERY:


-- successful usage of DEFAULT option in COPY
copy copy_default from stdin with (default '\D');
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1	value	'2022-07-04'
2	\D	'2022-07-03'
3	\D	\D
\.

select id, text_value, ts_value from copy_default;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 value '2022-07-04'
        ^


-----------
QUERY:


truncate copy_default;
RESULT:
	postgres: None

-----------
QUERY:


copy copy_default from stdin with (format csv, default '\D');
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1,value,2022-07-04
2,\D,2022-07-03
3,\D,\D
\.

select id, text_value, ts_value from copy_default;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1,value,2022-07-04
        ^


-----------
QUERY:


truncate copy_default;
RESULT:
	postgres: None

-----------
QUERY:


-- DEFAULT cannot be used in COPY TO
copy (select 1 as test) TO stdout with (default '\D');
RESULT:
	postgres: COPY DEFAULT only available using COPY FROM

